<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/nav_map" />
        <item
            android:id="@+id/nav_lineas"
            android:icon="@drawable/ic_directions_bus_black_24dp"
            android:title="@string/nav_lineas" />
        <item
            android:id="@+id/nav_destino"
            android:icon="@drawable/ic_pin_drop_black_24dp"
            android:title="@string/nav_destino" />
        <item
            android:id="@+id/nav_ajustes"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_ajustes" />
    </group>

    <item android:title="Comunicacion">
        <menu>
            <item
                android:id="@+id/nav_comentario"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_comentario" />
            <item
                android:id="@+id/nav_acc"
                android:icon="@drawable/ic_accessible_black_24dp"
                android:title="@string/nav_acc" />
        </menu>
    </item>

</menu>
